--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
     <a href="about.html">About</a>
    <div class="placeholder">
        I am Saima.
-      
    </div>  
+   <div class="anotherclass">
+    I am in class.
+</div> 
 
 </body>
 </html>
